--- a/python_volcano.ipynb
+++ b/python_volcano.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-12T15:47:07.296900Z",
@@ -19,13 +19,19 @@
     "\n",
     "import imageio\n",
     "from PIL import Image, ImageSequence\n",
-    "#from pygifsicle import optimize\n",
-    "import numpy as np    \n"
+    "import numpy as np    \n",
+    "\n",
+    "'''\n",
+    "from pygifsicle import optimize\n",
+    "\n",
+    "install \n",
+    "https://eternallybored.org/misc/gifsicle/\n",
+    "'''\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-12T15:47:07.955293Z",
@@ -39,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,11 +157,11 @@
    "source": [
     "#Create reader object for the gif\n",
     "\n",
-    "#gif1 = imageio.get_reader(pathDay + 'LCC_VIS_Gray_2750.gif')\n",
-    "gif2 = imageio.get_reader(pathDay + 'LCC_IR1_CR_2750.gif')\n",
-    "gif3 = imageio.get_reader(pathDay + 'LCC_IR1_MB_2750.gif')\n",
-    "gif4 = imageio.get_reader(pathDay + 'LCC_IR1_Gray_2750.gif')\n",
-    "gif5 = imageio.get_reader(pathDay + 'LCC_VIS_TRGB_2750.gif')\n",
+    "#gif1 = imageio.get_reader(pathDay + mapTypes[0] + '.gif')\n",
+    "gif2 = imageio.get_reader(pathDay + mapTypes[1] + '.gif')\n",
+    "gif3 = imageio.get_reader(pathDay + mapTypes[2] + '.gif')\n",
+    "gif4 = imageio.get_reader(pathDay + mapTypes[3] + '.gif')\n",
+    "gif5 = imageio.get_reader(pathDay + mapTypes[4] + '.gif')\n",
     "\n",
     "#If they don't have the same number of frame take the shorter\n",
     "number_of_frames = min( gif2.get_length(),gif3.get_length(),gif4.get_length(),gif5.get_length(),) \n",
@@ -182,63 +188,6 @@
     "gif5.close()\n",
     "\n",
     "new_gif.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#將各張GIF組成同一張\n",
-    "\n",
-    "images = []\n",
-    "\n",
-    "#計算整合後的影像尺寸\n",
-    "composite_image_width = (right-left)*5\n",
-    "composite_image_height = bottom - top\n",
-    "composite_image_size = (composite_image_width, composite_image_height)\n",
-    "\n",
-    "def mergeGif(frames, newImagelist,x,y):\n",
-    "    for frame in frames:\n",
-    "        #im_crop = frame.crop((left, top, right, bottom)) \n",
-    "        \n",
-    "        frame = composite_image.paste(frame,(0,0))\n",
-    "\n",
-    "        yield frame\n",
-    "\n",
-    "for mapType in mapTypes:\n",
-    "    #開啟GIF影像\n",
-    "    im = Image.open(pathDay + mapType + '.gif')\n",
-    "    # Get sequence iterator\n",
-    "    frames = ImageSequence.Iterator(im)\n",
-    "    frames = mergeGif(frames)\n",
-    "\n",
-    "    composite_image = Image.new('RGBA', composite_image_size , (0, 0, 0, 0))\n",
-    "\n",
-    "    pathSateType = pathDay + mapType +\"/\"\n",
-    "    pathDay + mapType + '.gif'\n",
-    "\n",
-    "\n",
-    "'''\n",
-    "\n",
-    "        def cropping(frames):\n",
-    "            for frame in frames:\n",
-    "                im_crop = frame.crop((left, top, right, bottom)) \n",
-    "                yield im_crop\n",
-    "        \n",
-    "        # Open source\n",
-    "        im = Image.open(pathDay + mapType +'_opt.gif')\n",
-    "\n",
-    "        # Get sequence iterator\n",
-    "        frames = ImageSequence.Iterator(im)\n",
-    "        frames = cropping(frames)\n",
-    "        # Save output\n",
-    "        om = next(frames) # Handle first frame separately\n",
-    "        om.info = im.info # Copy sequence info\n",
-    "        om.save(pathDay + mapType +'_crop.gif', save_all=True, append_images=list(frames))\n",
-    "        \n",
-    "'''    "
    ]
   },
   {
@@ -496,23 +445,6 @@
     "    #img.show()\n",
     "    return img\n",
     "    \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-12-31T03:48:24.738373Z",
-     "start_time": "2018-12-31T03:48:24.673467Z"
-    },
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
     "\n"
    ]
   },
